--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,8 +23,6 @@ body {
 }
 
 header {
-    /*background-image:url('dark_grey_brick.png');*/
-    /*background: none;*/
     background-image:url('back.png');
     width: 100%;
     height: 90px;
@@ -43,13 +41,8 @@ header {
     height: 371px;
     width: 100%;
     position: absolute;
+    text-align: center;
     z-index: -1;
-}
-
-#sketch {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .content {
@@ -62,7 +55,6 @@ header {
 
 .container {
     width: 1200px;
-    /*border: 1px solid white;*/
     margin-left: auto;
     margin-right: auto;
 }
@@ -76,7 +68,6 @@ header {
 .categories {
     width: 660px;
     height: 445px;
-    /*border: 1px solid red;*/
     float: left;
 }
 
@@ -104,8 +95,8 @@ header {
 .posts {
     width: 535px;
     height: 445px;
-    /*border: 1px solid yellow;*/
     float: right;
+    color: white;
 }
 
 .last_post {
@@ -118,39 +109,47 @@ header {
 }
 
 .post_date {
-    font-family: "Corbel";
     font-size: 13px;
     text-align: right;
     margin-right: 10px;
     margin-top: 10px;
-    color: white;
 }
 
 .post_title {
-    font-family: "Corbel";
     font-size: 20px;
     font-weight: bold;
     text-align: left;
     margin-left: 10px;
+}
+
+.category_title {
+    font-size: 20px;
+    font-weight: bold;
+    text-align: left;
+    margin-left: 10px;
+    margin-bottom: 30px;
+    margin-top: 30px;
     color: white;
 }
 
 .post_text {
     margin-top: 15px;
-    font-family: "Corbel";
-    font-size: 12px;
+    font-size: 15px;
     text-align: left;
     margin-left: 10px;
-    color: white;
+    margin-right: 10px;
+    text-align: justify;
 }
 
 .post_more {
     margin-top: 13px;
     margin-right: 10px;
-    font-family: "Corbel";
     font-size: 10px;
     text-align: right;
-    color: white;
+}
+
+.post_more:hover {
+    text-decoration: underline;
 }
 
 .recent_posts {
@@ -159,25 +158,31 @@ header {
     height: 250px;
     margin-top: 15px;
     margin-left: 15px;
-    /*border: 1px solid yellow;*/
 }
 
 .recent_post_title {
-    font-family: "Corbel";
     font-size: 17px;
     text-align: right;
     margin-right: 20px;
     margin-bottom: 20px;
-    color: white;
 }
 
 .recent_post_date {
-    font-family: "Corbel";
-    font-size: 10px;
+    font-size: 11px;
     text-align: right;
     margin-right: 20px;
     margin-top: 10px;
-    color: white;
+}
+
+.post_options {
+    text-align: right;
+    margin-right: 20px;
+    margin-top: -20px;
+    margin-bottom: 20px;
+}
+
+.post_options:hover {
+    text-decoration: underline;
 }
 
 div.recent_posts::-webkit-scrollbar {
@@ -203,4 +208,122 @@ footer {
     margin-bottom: 0px;
     box-shadow: 0px 0px 30px -1px #000;
     padding-top: 40px;
+}
+
+.error_explanation {
+    color: red;
+}
+
+textarea {
+    width: 100%;
+    height: 250px;
+}
+
+label {
+    color: white;
+}
+
+.entire_post {
+    width: 535px;
+    padding-top: 15px;
+    padding-bottom: 35px;
+    float: left;
+    color: white;
+}
+
+.entire_post:after {
+    content: '';
+    display: block;
+    clear: both;
+}
+
+.attached_photos {
+    width: 660px;
+    float: right;
+}
+
+.photos_in_category {
+    width: 1090px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.photos_in_category:after {
+    content: '';
+    display: block;
+    clear: both;
+}
+
+.photo_item {
+    width: 200px;
+    height: 200px;
+    margin-left: 15px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    float: left;
+    box-shadow: 0px 0px 30px -1px #000;
+    text-align: center;
+    background-color: white;
+}
+
+.photo_thumb {
+    width: 190px;
+    height: 170px;
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    background-color: #000000;
+}
+
+.mini_photo_title {
+    width: 200px;
+    height: 25px;
+    background-color: white;
+    color: #000000;
+}
+
+.photos_bar {
+    width: 100%;
+    margin-top: 30px;
+    padding-bottom: 30px;
+}
+
+.photos_bar:after {
+    content: '';
+    display: block;
+    clear: both;
+}
+
+.edit_photo_item {
+    width: 500px;
+    height: 170px;
+    margin-bottom: 15px;
+    float: left
+}
+
+.edit_photo_item:after {
+    content: '';
+    display: block;
+    clear: both;
+}
+
+.editing_form {
+    width: 400px;
+    margin-left: 30px;
+}
+
+#image_content {
+    text-align: center;
+    background: none;
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
+#photo_title {
+    font-size: 17px;
+    font-weight: bold;
+    color: gray;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
